feat: update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "makeitreal",
+  "name": "makeitrealcamp",
   "version": "1.0.0",
   "description": "A personal card for Make It Real",
   "main": "/bin/card.js",
