feat: update package

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "makeitrealcamp",
   "version": "1.0.0",
   "description": "A personal card for Make It Real",
-  "main": "/bin/card.js",
+  "main": "index.js",
+  "bin": {
+    "makeitrealcamp": "./bin/card.js"
+  },
   "type": "module",
   "scripts": {
     "prepublish": "npm run lint:fix",
