--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "type": "module",
   "scripts": {
+    "test": "echo \"pending...\"",
     "lint": "eslint --ext .js, build.js",
     "lint:fix": "eslint --ext .js, build.js --fix",
     "release": "np"
