feat: update readme

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "business",
     "card"
   ],
-  "author": "YOUR_NAME <your_email@email.com>",
+  "author": "Make It Real <info@makeitreal.camp>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/makeitrealcamp/npm-profile-card/issues"
